fix: hiding header banners on mobile, fixing mask on demo video

--- a/assets/styles/layouts/tests/RequestDemo.scss
+++ b/assets/styles/layouts/tests/RequestDemo.scss
@@ -86,6 +86,13 @@ body.demo {
 				overflow: visible;
 			}
 
+			.e-hosted-video {
+				width: 300%;
+				mask-image:
+					linear-gradient(180deg, transparent 0%, black 15%, black 90%, transparent 95%),
+					linear-gradient(to right, transparent 90%, black 100%);
+			}
+
 			video {
 				width: auto;
 				border: 0;
